--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
     top: 0px;
     width: 100%;
     height: 100%;
+    overflow-y: visible;
 }
 #ccb_large_title,#play_ccb,#ccb_end_title {
     position: relative;
